--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 10:14:00 AM</p>
+    <p class="lastupdate">09/12/2020 10:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">62.4&#176;F</td>
+        <td class="data">62.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">62.4&#176;F</td>
+        <td class="data">62.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">62.4&#176;F</td>
+        <td class="data">62.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.5&#176;F</td>
+        <td class="data">46.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.962 inHg (0.004)</td>
+        <td class="data">29.961 inHg (0.001)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SE (135&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">70.2&#176;F</td>
+        <td class="data">70.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:13:33 AM">
-            62.4</span><br/>
+          <span title="10:17:39 AM">
+            62.8</span><br/>
           <span title="07:15:43 AM">
             45.6</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:13:33 AM" class="hival">
-            62.4</span>
+          <span title="10:17:39 AM" class="hival">
+            62.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="10:12:21 AM">
-            46.9</span><br/>
+          <span title="10:15:57 AM">
+            47.2</span><br/>
           <span title="06:40:41 AM">
             40.7</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          281
+          265
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 19 hours, 27 minutes</td>
+      <td class="data">10 days, 19 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 19 hours, 27 minutes</td>
+      <td class="data">10 days, 19 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
