--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 10:34:00 AM</p>
+    <p class="lastupdate">09/12/2020 10:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">64.5&#176;F</td>
+        <td class="data">65.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">64.5&#176;F</td>
+        <td class="data">65.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">64.5&#176;F</td>
+        <td class="data">65.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.5&#176;F</td>
+        <td class="data">47.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">54%</td>
+        <td class="data">53%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.958 inHg (-0.003)</td>
+        <td class="data">29.960 inHg (-0.004)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph E (90&#176;)</td>
+        <td class="data">1 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">70.4&#176;F</td>
+        <td class="data">70.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:33:33 AM">
-            64.5</span><br/>
+          <span title="10:39:00 AM">
+            65.5</span><br/>
           <span title="07:15:43 AM">
             45.6</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:33:33 AM" class="hival">
-            64.5</span>
+          <span title="10:39:00 AM" class="hival">
+            65.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="10:33:33 AM">
-            47.5</span><br/>
+          <span title="10:39:00 AM">
+            47.9</span><br/>
           <span title="06:40:41 AM">
             40.7</span>
         </td>
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="05:42:45 AM">
             86</span><br/>
-          <span title="10:27:11 AM">
-            54</span>
+          <span title="10:37:25 AM">
+            52</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:04:49 AM (Friday)">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          195
+          186
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          234
+          233
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 19 hours, 47 minutes</td>
+      <td class="data">10 days, 19 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 19 hours, 47 minutes</td>
+      <td class="data">10 days, 19 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
