--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 11:54:00 AM</p>
+    <p class="lastupdate">09/12/2020 11:59:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">77.9&#176;F</td>
+        <td class="data">78.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">77.9&#176;F</td>
+        <td class="data">78.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">77.9&#176;F</td>
+        <td class="data">78.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -66,15 +66,15 @@
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">37%</td>
+        <td class="data">36%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.922 inHg (-0.044)</td>
+        <td class="data">29.920 inHg (-0.046)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph SW (225&#176;)</td>
+        <td class="data">1 mph SSE (158&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">71.4&#176;F</td>
+        <td class="data">71.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:53:49 AM">
-            77.9</span><br/>
+          <span title="11:58:38 AM">
+            78.7</span><br/>
           <span title="07:15:43 AM">
             45.6</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:53:49 AM" class="hival">
-            77.9</span>
+          <span title="11:58:38 AM" class="hival">
+            78.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="05:42:45 AM">
             86</span><br/>
-          <span title="11:50:01 AM">
-            37</span>
+          <span title="11:57:44 AM">
+            35</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:04:49 AM (Friday)">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:16:01 AM">
             29.972</span><br/>
-          <span title="11:52:01 AM">
-            29.921</span>
+          <span title="11:56:02 AM">
+            29.920</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:56:01 AM (Friday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          135
+          136
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 21 hours, 7 minutes</td>
+      <td class="data">10 days, 21 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 21 hours, 7 minutes</td>
+      <td class="data">10 days, 21 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
